user-auth-and-audit/part2/vs-2.yaml
apiVersion: gateway.solo.io/v1
kind: VirtualService
metadata:
  name: petclinic
  namespace: gloo-system
spec:
  virtualHost:
    domains:
      - '*'
    routes:
      - matchers:
          - prefix: /
        routeAction:
          single:
            upstream:
              name: default-petclinic-8080
              namespace: gloo-system
    options:
      extauth:
        configRef:
          name: keycloak-oauth-then-opa
          namespace: gloo-system
